crates/as2/src/parser/snapshots/ruasc_as2__parser__tests__all_samples@op_precedence__bit_math.as.snap
---
source: crates/as2/src/parser/tests.rs
expression: parsed
input_file: samples/op_precedence/bit_math.as
---
Ok:
  statements:
    - Declare:
        - name: a
          value:
            Constant:
              Integer: 12
    - Declare:
        - name: b
          value:
            Constant:
              Integer: 5
    - Declare:
        - name: c
          value:
            Constant:
              Integer: 3
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - BinaryOperator:
                    - Add
                    - BinaryOperator:
                        - Add
                        - BinaryOperator:
                            - Add
                            - BinaryOperator:
                                - Add
                                - Constant:
                                    String: a=
                                - Constant:
                                    Identifier: a
                            - Constant:
                                String: ", b="
                        - Constant:
                            Identifier: b
                    - Constant:
                        String: ", c="
                - Constant:
                    Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - Constant:
                String: "----"
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a & b = "
                - Parenthesis:
                    BinaryOperator:
                      - BitAnd
                      - Constant:
                          Identifier: a
                      - Constant:
                          Identifier: b
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a & b & c = "
                - Parenthesis:
                    BinaryOperator:
                      - BitAnd
                      - BinaryOperator:
                          - BitAnd
                          - Constant:
                              Identifier: a
                          - Constant:
                              Identifier: b
                      - Constant:
                          Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "((a & b) & c) = "
                - Parenthesis:
                    BinaryOperator:
                      - BitAnd
                      - Parenthesis:
                          BinaryOperator:
                            - BitAnd
                            - Constant:
                                Identifier: a
                            - Constant:
                                Identifier: b
                      - Constant:
                          Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - Constant:
                String: "---"
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a ^ b = "
                - Parenthesis:
                    BinaryOperator:
                      - BitXor
                      - Constant:
                          Identifier: a
                      - Constant:
                          Identifier: b
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a ^ b ^ c = "
                - Parenthesis:
                    BinaryOperator:
                      - BitXor
                      - BinaryOperator:
                          - BitXor
                          - Constant:
                              Identifier: a
                          - Constant:
                              Identifier: b
                      - Constant:
                          Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "((a ^ b) ^ c) = "
                - Parenthesis:
                    BinaryOperator:
                      - BitXor
                      - Parenthesis:
                          BinaryOperator:
                            - BitXor
                            - Constant:
                                Identifier: a
                            - Constant:
                                Identifier: b
                      - Constant:
                          Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - Constant:
                String: "---"
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a | b = "
                - Parenthesis:
                    BinaryOperator:
                      - BitOr
                      - Constant:
                          Identifier: a
                      - Constant:
                          Identifier: b
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a | b | c = "
                - Parenthesis:
                    BinaryOperator:
                      - BitOr
                      - BinaryOperator:
                          - BitOr
                          - Constant:
                              Identifier: a
                          - Constant:
                              Identifier: b
                      - Constant:
                          Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "((a | b) | c) = "
                - Parenthesis:
                    BinaryOperator:
                      - BitOr
                      - Parenthesis:
                          BinaryOperator:
                            - BitOr
                            - Constant:
                                Identifier: a
                            - Constant:
                                Identifier: b
                      - Constant:
                          Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - Constant:
                String: "---"
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a & b ^ c = "
                - Parenthesis:
                    BinaryOperator:
                      - BitXor
                      - BinaryOperator:
                          - BitAnd
                          - Constant:
                              Identifier: a
                          - Constant:
                              Identifier: b
                      - Constant:
                          Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "((a & b) ^ c) = "
                - Parenthesis:
                    BinaryOperator:
                      - BitXor
                      - Parenthesis:
                          BinaryOperator:
                            - BitAnd
                            - Constant:
                                Identifier: a
                            - Constant:
                                Identifier: b
                      - Constant:
                          Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - Constant:
                String: "---"
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a ^ b | c = "
                - Parenthesis:
                    BinaryOperator:
                      - BitOr
                      - BinaryOperator:
                          - BitXor
                          - Constant:
                              Identifier: a
                          - Constant:
                              Identifier: b
                      - Constant:
                          Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "((a ^ b) | c) = "
                - Parenthesis:
                    BinaryOperator:
                      - BitOr
                      - Parenthesis:
                          BinaryOperator:
                            - BitXor
                            - Constant:
                                Identifier: a
                            - Constant:
                                Identifier: b
                      - Constant:
                          Identifier: c
